updated bg image on toc  page, spacing,  position fixes

--- a/src/scss/pages/page-what-is-celestia.scss
+++ b/src/scss/pages/page-what-is-celestia.scss
@@ -1,4 +1,6 @@
 .what-is-celestia {
+	position: relative;
+	z-index: 1;	
 	.lead-text {
 		font-family: $inter;
 		font-size: 18px;
